# advent-of-code

./: .gitignore  Cargo.toml  fetch_input.sh  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
ac1/: Cargo.toml
ac2/: Cargo.toml
ac3/: Cargo.toml
ac4/: Cargo.toml
ac5/: Cargo.toml
ac6/: Cargo.toml
ac7/: Cargo.toml
ac8/: Cargo.toml
ac9/: Cargo.toml
ac_2019_01/: Cargo.toml
ac_2020_1/: Cargo.toml
ac_2020_10/: Cargo.toml
ac_2020_2/: Cargo.toml
ac_2020_3/: Cargo.toml
ac_2020_4/: Cargo.toml
ac_2020_5/: Cargo.toml
ac_2020_6/: Cargo.toml
ac_2020_7/: Cargo.toml
ac_2020_8/: Cargo.toml
ac_2020_9/: Cargo.toml
ac_2021_1/: Cargo.toml
ac_2021_10/: Cargo.toml
ac_2021_11/: Cargo.toml
ac_2021_12/: Cargo.toml
ac_2021_13/: Cargo.toml
ac_2021_14/: Cargo.toml
ac_2021_15/: Cargo.toml
ac_2021_16/: Cargo.toml
ac_2021_17/: Cargo.toml
ac_2021_18/: Cargo.toml
ac_2021_2/: Cargo.toml
ac_2021_3/: Cargo.toml
ac_2021_4/: Cargo.toml
ac_2021_5/: Cargo.toml
ac_2021_6/: Cargo.toml
ac_2021_7/: Cargo.toml
ac_2021_8/: Cargo.toml
ac_2021_9/: Cargo.toml
ac_2022_01/: Cargo.toml
ac_2022_04/: Cargo.toml
ac_2022_06/: Cargo.toml
ac_2022_07/: Cargo.toml
ac_2022_09/: Cargo.toml
ac_2022_1/: Cargo.toml
ac_2022_10/: Cargo.toml
ac_2022_11/: Cargo.toml
ac_2022_12/: Cargo.toml
ac_2022_13/: Cargo.toml
ac_2022_14/: Cargo.toml
ac_2022_15/: Cargo.toml
ac_2022_16/: Cargo.toml
ac_2022_17/: Cargo.toml
ac_2022_2/: Cargo.toml
ac_2022_3/: Cargo.toml
ac_2022_4/: Cargo.toml
ac_2022_5/: Cargo.toml
ac_2022_6/: Cargo.toml
(+201 files in other folders)
