[workspace]

members = [
    "ac_2021_1",
    "ac_2021_2",
    "ac_2021_3",
    "ac_2021_4",
    "ac_2021_5",
    "ac_2021_6",
    "ac_2021_7",
    "ac_2021_8",
    "ac_2021_9",
    "ac_2021_10",
    "ac_2020_1",
    "ac_2020_2",
    "ac_2020_3",
    "ac_2020_4",
    "ac_2020_5",
    "ac_2020_6",
    "ac_2020_7",
    "ac_2021_11",
    "ac_2020_8",
    "ac_2020_9",
    "ac_2020_10",
    "ac_2021_12",
    "advent_of_code_util",
]